--- a/Nacional-Javascript Functions.html
+++ b/Nacional-Javascript Functions.html
@@ -19,9 +19,9 @@
 	<input type="number" id="num2" name="num2">
 	<br>
 	<button onclick="add()">Add</button>
-	<button onclick="subtract()">Subtract</button>
-	<button onclick="multiply()">Multiply</button>
-	<button onclick="divide()">Divide</button>
+	<button onclick="sub()">Sub</button>
+	<button onclick="multi()">Multi</button>
+	<button onclick="div()">Div</button>
 	<div class="output" id="output"></div>
 
 	<script>
@@ -36,36 +36,36 @@
       }
 
 		function checkAge() {
-			var age = document.getElementById("age").value;
-			if (age > 65) {
-				alert("True");
+	var age = document.getElementById("age").value;
+	if (age > 65) {
+	alert("True");
 			} else {
-				alert("False");
+	alert("False");
 			}
 		}
 
 		function add() {
-			var num1 = Number(document.getElementById("num1").value);
-			var num2 = Number(document.getElementById("num2").value);
-			document.getElementById("output").innerHTML = "Result: " + (num1 + num2);
+	var num1 = Number(document.getElementById("num1").value);
+	var num2 = Number(document.getElementById("num2").value);
+	document.getElementById("output").innerHTML = "Result: " + (num1 + num2);
 		}
 
-		function subtract() {
-			var num1 = Number(document.getElementById("num1").value);
-			var num2 = Number(document.getElementById("num2").value);
-			document.getElementById("output").innerHTML = "Result: " + (num1 - num2);
+		function sub() {
+	var num1 = Number(document.getElementById("num1").value);
+	var num2 = Number(document.getElementById("num2").value);
+	document.getElementById("output").innerHTML = "Result: " + (num1 - num2);
 		}
 
-		function multiply() {
-			var num1 = Number(document.getElementById("num1").value);
-			var num2 = Number(document.getElementById("num2").value);
-			document.getElementById("output").innerHTML = "Result: " + (num1 * num2);
+		function multi() {
+	var num1 = Number(document.getElementById("num1").value);
+	var num2 = Number(document.getElementById("num2").value);
+	document.getElementById("output").innerHTML = "Result: " + (num1 * num2);
 		}
 
-		function divide() {
-			var num1 = Number(document.getElementById("num1").value);
-			var num2 = Number(document.getElementById("num2").value);
-			document.getElementById("output").innerHTML = "Result: " + (num1 / num2);
+		function div() {
+	var num1 = Number(document.getElementById("num1").value);
+	var num2 = Number(document.getElementById("num2").value);
+	document.getElementById("output").innerHTML = "Result: " + (num1 / num2);
 		}
 	</script>
 </body>
